sg-1036 Fixed chinese language option that was cut off in language picker.

--- a/web/themes/custom/sfgovpl/src/sass/components/_gtranslate.scss
+++ b/web/themes/custom/sfgovpl/src/sass/components/_gtranslate.scss
@@ -40,7 +40,7 @@
       }
 
       @include media($medium-screen) {
-        width: 110px;
+        width: 125px;
       }
 
       @include ie-only {
